# reducto

./: .coverage  .gitignore  .goreleaser.yml  Dockerfile  README.md  ROADMAP.md  go.mod  go.sum  install.sh  pyproject.toml  pytest.ini
.github/workflows/: analysis.yml  installation.yml  publish.yml  test.yml  testpypi.yml
.reducto/: reducto-dryrun-42e7b51e-f0f5-426e-b152-18d1539c5905.md  reducto-dryrun-a18b4c80-8b60-4fb0-bdd0-4a27e0b46828.md  reducto-dryrun-f8a338f0-9966-4067-86bd-f6cc51c45643.md
docs/: ARCHITECTURE.md  DESIGN.md  HYBRID_TECHSTACK.md  ONBOARDING.md  README.md  SAFETY.md  TECH_STACK.md  TEST_IMPLEMENTATION.md  TEST_RULES.md  index.html
internal/cli/: root.go
internal/config/: config.go  config_test.go
internal/config/testdata/: invalid.yaml  valid.yaml
internal/git/: git.go
internal/lsp/: go.go  manager.go  manager_test.go  protocol.go  python.go  typescript.go
internal/mcp/: diff.go  diff_test.go  protocol.go  protocol_test.go  server.go
internal/parser/: parser.go  parser_test.go  ts_parser.go
internal/reporter/: reporter.go  reporter_test.go
internal/runner/: runner.go  runner_test.go
internal/sidecar/: mcp_lifecycle.go  sidecar_path.go
internal/walker/: walker.go  walker_test.go
pkg/models/: config.go  models.go
python/: pyproject.toml  requirements-test.txt
python/ai_sidecar/: __init__.py  main.py  mcp_entry.py  models.py  session.py
python/ai_sidecar/agents/: __init__.py  analyzer.py  base.py  deduplicator.py  idiomatizer.py  pattern.py  quality_checker.py  validator.py
python/ai_sidecar/embeddings/: service.py
python/ai_sidecar/llm/: __init__.py  router.py
python/ai_sidecar/mcp/: __init__.py  client.py
python/ai_sidecar/utils/: __init__.py  code_utils.py
python/tests/: __init__.py  test_embeddings.py  test_idiomatizer.py  test_mcp_client.py  test_models.py
python/tests/integration/: __init__.py  test_llm_integration.py
python/tests/unit/: __init__.py
reducto/: __init__.py  __main__.py  cli.py  config.py  diff.py  git_safety.py  models.py  parse.py  repo.py  reporter.py  runner.py  services.py  session.py  workspace.py
reducto/agents/: __init__.py  analyzer.py  base.py  deduplicator.py  idiomatizer.py  pattern.py  quality_checker.py  validator.py
reducto/embeddings/: __init__.py  service.py
reducto/llm/: __init__.py  router.py
reducto/lsp/: __init__.py  client.py
reducto/utils/: __init__.py  code_utils.py
test-python-code/: README.md  common_variables_name.txt
test-python-code/python/duplicates/: auth_validator.py  user_validator.py
test-python-code/python/exercise/: buildArray.py  variables_methods_naming_question.py  variables_methods_naming_solution.py
test-python-code/python/function/: abstract_on_pizza.py  descriptif_names_function.py  high_complexity.py  long_and_repetitive_function.py  long_function.py  (+1 more)
tests/: conftest.py  test_config.py  test_config.yaml  test_sidecar.py
tests/e2e/: test_apply_plan.py  test_cli_smoke.py  test_deduplication.py  test_repository_analysis.py
tests/integration/: test_sidecar_communication.py
tests/scenario/: __init__.py  test_test_rules.py
tests/unit/: test_analyzer_hotspots.py  test_apply_idiomatize.py  test_code_utils.py  test_complexity.py  test_config.py  test_deduplicator.py  test_diff.py  test_embeddings.py  test_git.py  test_git_nonrepo.py  test_idiomatizer.py  test_lsp.py  test_models.py  test_parse.py  test_parse_regression.py  test_pattern_agent.py  test_quality_checker.py  test_repo.py  test_reporter.py  test_router.py  test_session.py  test_session_metadata.py  test_walk_exclusions.py  test_workspace.py
tests/utils/: __init__.py  assertions.py  llm_mocks.py  repository_builder.py
(+10 files in other folders)
