[project]
name = "reducto"
version = "1.0.0"
description = "Semantic code compression engine"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Alex Karsten" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
]

[project.optional-dependencies]
embeddings = [
    "chromadb>=1.5.0",
    "sentence-transformers>=2.2.0",
]
# Marker extra: analyzing Go repos needs `go` on PATH (see README).
go = []
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
reducto = "reducto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reducto"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F841", "W291", "W293"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=reducto --cov-report=term-missing --cov-fail-under=45 -m 'not lsp'"
markers = [
    "lsp: requires language server on PATH",
    "embeddings: requires sentence-transformers model download",
]
